tests/build/unsupported_into.stderr
error[E0277]: `Test` cannot be converted to a Python object
 --> tests/build/unsupported_into.rs:9:5
  |
9 |     test: Test,
  |     ^^^^^^----
  |     |     |
  |     |     required by a bound introduced by this call
  |     the trait `IntoPy<Py<PyAny>>` is not implemented for `Test`
  |
  = note: `IntoPy` is automatically implemented by the `#[pyclass]` macro
  = note: if you do not wish to have a corresponding Python type, implement it manually
  = note: if you do not own `Test` you can perform a manual conversion to one of the types in `pyo3::types::*`
  = help: the following other types implement trait `IntoPy<T>`:
            <&'a OsString as IntoPy<Py<PyAny>>>
            <&'a Path as IntoPy<Py<PyAny>>>
            <&'a PathBuf as IntoPy<Py<PyAny>>>
            <&'a PyErr as IntoPy<Py<PyAny>>>
            <&'a String as IntoPy<Py<PyAny>>>
            <&'a [u8] as IntoPy<Py<PyAny>>>
            <&'a str as IntoPy<Py<PyAny>>>
            <&'a str as IntoPy<Py<PyString>>>
          and $N others
